--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,7 +6,10 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -21,5 +24,10 @@ body {
 }
 
 /*
- * Additional CSS can be defined below or in other CSS files, as per instructions
+ * Additional CSS can be defined below or * in other CSS files, as per instructions
  */
+.container {
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
