--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -18,7 +18,7 @@ body {
   font-size: 24px;
 }
 
-header {
+.headerProfilePicture {
   /* 
    * box modeling properties 
    */
@@ -36,6 +36,4 @@ header {
   background-color: #f2edb3;
   /* background: linear-gradient(45deg, #f06, yellow); */
   background-image: url("https://www.transparenttextures.com/patterns/random-grey-variations.png");
-
-
 }
