--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,8 +13,7 @@ nav {
   top: 0;
   width: 100%;
 
-
-  /* 
+  /*
    * flexbox properties 
    */
   display: flex;
@@ -23,12 +22,14 @@ nav {
 }
 
 .navNewTweet {
-  /* box modeling properties */
-  font-size: 20px;
+  /* 
+   * box modeling properties 
+   */  font-size: 20px;
   font-family: 'Source Sans Pro', sans-serif;
 
-  /* flexbox properties */
-  display: flex;
+  /*
+   * flexbox properties 
+   */  display: flex;
   flex-direction: column;
   align-items: center;
 }
@@ -36,3 +37,4 @@ nav {
 .doubleArrows {
   color: orangered;
 }
+
