--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -15,21 +15,41 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+#error-empty {
+  display: none;
+  border: 3px solid #ff1800;
+  background: linear-gradient(45deg, yellow, orange);
+  margin-top: 3%;
+  padding: 2%;
+  color: #ff1800;
+}
+
+#error-tooLong {
+  display: none;
+  border: 3px solid #ff1800;
+  background: linear-gradient(45deg, yellow, orange);
+  margin-top: 3%;
+  padding: 2%;
+  color: #ff1800;
+}
+
 ::placeholder {
   color: #545149;
   opacity: 1;
 }
 
 #tweet-text {
+  margin-top: 2em;
   border: none;
   outline: none;
   border-bottom: 4px solid #545149;
   background-color: #f4f1ec;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 0.8em;
   resize: none;
   width: 100%;
   height: 2em;
+  overflow: none;
 }
 
 .newTweetForm {
@@ -51,7 +71,11 @@ body {
   background-color: #183a90;
   border: none;
   font-size: 20px;
-  padding: 5px 10px;
+  padding: 5px 7px;
+}
+
+.button:active {
+  transform: translateY(1px);
 }
 
 .tweetHeaderProfilePicture {
