--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,13 +8,11 @@ html {
   box-sizing: inherit;
 }
 
-/*
- * Global layout stuff
- */
-
-body {
+.embody {
   color: #545149;
   background-color: #f4f1ec;
+  font-size: 30px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .headerProfilePicture {
@@ -32,7 +30,6 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #eec374;
-  /* background: linear-gradient(45deg, #f06, yellow); */
   background-image: url("https://www.transparenttextures.com/patterns/random-grey-variations.png");
 }
 
@@ -44,6 +41,5 @@ body {
   .headerProfilePicture {
     width: 25vw;
     margin-top: 120px;
-
   }
 }
