--- a/public/styles/posted-tweet.css
+++ b/public/styles/posted-tweet.css
@@ -2,13 +2,7 @@ html {
   box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body {
+.container {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
